--- a/style.css
+++ b/style.css
@@ -58,10 +58,46 @@ body{
     color: white;
     padding: 10px;
     border-radius: 30px;
+    cursor: pointer;
+    border: solid purple 1px;
+}
+
+.Categories p:hover{
+    transition: 1s;
+    background-color: transparent;
+    color:black;
+    border: solid purple 1px;
+
 }
 
 .sale-image img{
     width: 100%;
+}
+.sale-image__offer{
+    width: 35%;
+    border: solid black 2px;
+    background-color: white;
+    padding: 2%;
+    position: absolute;
+    top: 25%;
+    left: 2%;
+    animation-name: zoom;
+    animation-duration: 2s;
+    opacity: 0;
+    animation-fill-mode: forwards;
+}
+
+@keyframes zoom{
+   0%{
+    transform: scale(0);
+    opacity: 0;
+   }
+   
+   100%{
+    transform: scale(1);
+    opacity: 1;
+   }
+
 }
 
 .recommended{
