updated media queries

--- a/style.css
+++ b/style.css
@@ -45,6 +45,10 @@ body{
     align-items: center;
 }
 
+.navbar__s4{
+    display: none;
+}
+
 .Categories{
     display: flex;
     padding: 10px;
@@ -71,7 +75,7 @@ body{
 }
 
 .sale-image img{
-    width: 100%;
+    width: 100px;
 }
 .sale-image__offer{
     width: 35%;
@@ -113,13 +117,15 @@ body{
 }
 
 .course-card{
-    width: 300px;
+    flex-grow: 1;
+    flex-basis: 20%;
+    margin: 5px;
     
 }
 
 .course-card img{
-    width: 100%;
     height: 50%;
+    width: 100%;
 }
 
 .topics{
@@ -173,3 +179,28 @@ body{
     display: flex;
     justify-content: space-between;
 }
+
+/* media queries */
+
+@media screen and (max-width:800px){
+    body{
+        font-size: 10px;
+    }
+}
+
+@media screen and (max-width:600px) {
+    .course-card{
+        flex-basis: 40%;
+    }
+    .Categories{
+        display: none;
+    }
+    .navbar__s2,.navbar__s3{
+        display: none;
+
+    }
+    .navbar__s4{
+        display: block;
+    }
+    
+    }
